syntax = "proto3";

package authpb;

option go_package = "./authpb";

service AuthService {
		rpc Register(RegisterRequest) returns (AuthResponse) {}
		rpc Login(LoginRequest) returns (AuthResponse) {}
}

message RegisterRequest {
	string name = 1;
	string email = 2;
	string password = 3;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message AuthResponse {
	string access_token = 1;
	string refresh_token = 2;
}
